--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -37,6 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "typescript": "~5.1.3"
   }
