--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "json-server": "^0.17.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.2.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
