--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
     "json-server": "^0.17.3",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
