--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start:backend": "json-server --watch db.json --port 5000",
+    "start:backend": "node json-server.js",
     "avto-serve": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "private": true,
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "cors": "^2.8.5",
     "json-server": "^0.17.3",
     "primeicons": "^6.0.1",
     "primeng": "^16.2.0",
