--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ngrx/effects": "^16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "^16.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "cors": "^2.8.5",
     "json-server": "^0.17.3",
     "primeicons": "^6.0.1",
